--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/
 PyYAML==6.0.2
 Pygments==2.19.1
 Send2Trash==1.8.3
+aiofiles==24.1.0
+annotated-types==0.7.0
 anyio==4.9.0
 archspec @ file:///croot/archspec_1709217642129/work
 argon2-cffi-bindings==21.2.0
@@ -21,6 +23,7 @@ boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 comm==0.2.2
 conda @ file:///croot/conda_1738168370816/work
@@ -35,16 +38,22 @@ decorator==5.2.1
 defusedxml==0.7.1
 distro @ file:///croot/distro_1714488253808/work
 executing==2.2.0
+fastapi==0.115.12
 fastjsonschema==2.21.1
+ffmpy==0.5.0
 filelock==3.13.1
 fonttools==4.56.0
 fqdn==1.5.1
 frozendict @ file:///croot/frozendict_1713194832637/work
 fsspec==2024.6.1
 gitdb==4.0.12
+gradio==5.28.0
+gradio_client==1.10.0
+groovy==0.1.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
 ipykernel==6.29.5
 ipython==9.0.2
@@ -70,8 +79,10 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.8
 libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
+markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 matplotlib==3.10.1
+mdurl==0.1.2
 menuinst @ file:///croot/menuinst_1714510563922/work
 mistune==3.1.2
 mpmath==1.3.0
@@ -84,6 +95,7 @@ nest-asyncio==1.6.0
 networkx==3.3
 notebook_shim==0.2.4
 numpy==2.2.4
+orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -102,43 +114,58 @@ pure_eval==0.2.3
 pyOpenSSL @ file:///croot/pyopenssl_1741343803032/work
 pycosat @ file:///croot/pycosat_1714510623388/work
 pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydub==0.25.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+python-multipart==0.0.20
 pytz==2025.1
 pyzmq==26.3.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==14.0.0
 rpds-py==0.23.1
 ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
+ruff==0.11.8
+safehttpx==0.1.6
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
+semantic-version==2.10.0
 setuptools==76.0.0
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+starlette==0.46.2
 sympy==1.13.1
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+tomlkit==0.13.2
 torch==2.6.0+cpu
 tornado==6.4.2
 tqdm @ file:///croot/tqdm_1714567712644/work
 traitlets==5.14.3
 truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
+typer==0.15.3
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
+uvicorn==0.34.2
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
 wheel==0.43.0
 zstandard @ file:///croot/zstandard_1714677652653/work
